opam-version: "2.0"
name:         "streming-json-parser"
maintainer:   "Melwyn Saldanha <melwyn95@gmail.com>"
authors:      "Melwyn Saldanha <melwyn95@gmail.com>"
synopsis:     "POC: streaming json parser"
description:  "POC: streaming json parser"
depends: [
  "ocaml"
  "dune"
  "ocaml-lsp-server"
  "ocamlformat-rpc"
  "yojson"
  "core"
  "ppx_deriving"
  "core_bench"
]